# integration

./: .gitignore  AbstractFunction.cpp  AbstractFunction.hpp  AbstractIntegration.cpp  AbstractIntegration.hpp  AbstractIntegrator.cpp  AbstractIntegrator.hpp  CMakeLists.txt  CodedFunction.cpp  CodedFunction.hpp  Doxyfile  ForderFunction.cpp  ForderFunction.hpp  FunctionFparser.cpp  FunctionFparser.hpp  Initialization.cpp  Initialization.hpp  LICENSE  MidpointIntegration.cpp  MidpointIntegration.hpp  MidpointIntegrator.cpp  MidpointIntegrator.hpp  ParserFunction.cpp  ParserFunction.hpp  README.md  SimpsonIntegrator.cpp  SimpsonIntegrator.hpp  TrapezoidalIntegrator.cpp  TrapezoidalIntegrator.hpp  domain.cpp  domain.hpp  function.cpp  function.hpp  hello_test.cc  main.cpp  testexprtk.cpp
Function/: AbstractFunction.cpp  AbstractFunction.hpp  CodedFunction.hpp  ForderFunction.hpp  ParserFunction.cpp  ParserFunction.hpp
Integrator/: AbstractIntegrator.cpp  AbstractIntegrator.hpp  MidpointIntegrator.cpp  MidpointIntegrator.hpp  SimpsonIntegrator.cpp
Test/: main_test.cc  test_integrators.cpp  test_main.cpp
exprtk/: exprtk_benchmark.cpp  exprtk_simple_example_01.cpp  exprtk_simple_example_02.cpp  exprtk_simple_example_03.cpp  exprtk_simple_example_04.cpp  exprtk_simple_example_05.cpp  exprtk_simple_example_06.cpp  exprtk_simple_example_07.cpp  exprtk_simple_example_08.cpp  exprtk_simple_example_09.cpp  exprtk_simple_example_10.cpp  exprtk_simple_example_11.cpp  exprtk_simple_example_12.cpp  exprtk_simple_example_13.cpp  exprtk_simple_example_14.cpp  exprtk_simple_example_15.cpp  exprtk_simple_example_16.cpp  exprtk_simple_example_17.cpp  exprtk_simple_example_18.cpp  exprtk_simple_example_19.cpp
src/: Initialization.cpp  Initialization.hpp
src/Function/: AbstractFunction.cpp  AbstractFunction.hpp  CodedFunction.cpp  CodedFunction.hpp  ForderFunction.cpp  ForderFunction.hpp  ParserFunction.cpp  ParserFunction.hpp
src/Integrator/: AbstractIntegrator.cpp  AbstractIntegrator.hpp  MidpointIntegrator.cpp  MidpointIntegrator.hpp  SimpsonIntegrator.cpp  SimpsonIntegrator.hpp  TrapezoidalIntegrator.cpp  TrapezoidalIntegrator.hpp
